@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-21T01:14:40Z",
-  "count" : 14,
-  "count_minmax" : [ 12, 14 ],
-  "count_decinc" : [ -0, +14 ],
-  "uniques" : 2,
+  "timestamp" : "2024-02-03T16:18:02Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 14 ],
+  "count_decinc" : [ -12, +14 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
