@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-02-03T01:03:09Z",
+  "timestamp" : "2024-02-03T16:18:02Z",
   "count_outdated" : 2848,
   "uniques_outdated" : 549,
-  "count" : 3037,
-  "uniques" : 570,
+  "count" : 3044,
+  "uniques" : 571,
   "views" : [
     {
       "timestamp": "2024-01-20T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 12, 14 ],
-      "count_decinc": [ 0, 14 ],
-      "uniques": 2,
+      "count": 2,
+      "count_minmax": [ 2, 14 ],
+      "count_decinc": [ 12, 14 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-01-21T00:00:00Z",
@@ -103,6 +103,15 @@
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-02-03T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
