@@ -1,11 +1,11 @@
 {
-  "count": 189,
-  "uniques": 21,
+  "count": 184,
+  "uniques": 20,
   "views": [
     {
       "timestamp": "2024-01-20T00:00:00Z",
-      "count": 14,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2024-01-21T00:00:00Z",
@@ -56,6 +56,11 @@
       "timestamp": "2024-02-02T00:00:00Z",
       "count": 26,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-02-03T00:00:00Z",
+      "count": 7,
+      "uniques": 1
     }
   ]
 }
